<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/daily_filter"
                android:title="@string/daily_filter_title"
                android:checked="true"
        />
        <item
                android:id="@+id/weekly_filter"
                android:title="@string/weekly_filter_title"
        />
        <item
                android:id="@+id/monthly_filter"
                android:title="@string/monthly_filter_title"
        />
        <item
                android:id="@+id/yearly_filter"
                android:title="@string/yearly_filter_title"
        />
    </group>
</menu>
