<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@mipmap/home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_drink"
                android:icon="@mipmap/mug"
                android:title="@string/log_drink"/>
        <item
                android:id="@+id/nav_data"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/view_hist"/>
        <item
            android:id="@+id/nav_history"
            android:title="@string/menu_hist"
            android:icon="@drawable/ic_menu_graph"
        />
        <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_rate"/>
    </group>

</menu>
